2009-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* serial/uart.c:
	Reflect changes to rtems_termios_callbacks->write.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/rtc.c: Add initializer (Silence warning).

2009-05-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* clock/rtc.c, clock/tod.h: Update for new RTC driver interface.

2009-05-25	Allan Hessenflow <allanh@kallisti.com>

	* mmu/mmu.c: enable mmu after initializing it.
	* mmu/mmu.h: add missing mmu flags entries.
	* include/mmuRegs.h: correct a couple field name typos.

2008-09-25	Allan Hessenflow <allanh@kallisti.com>

	* clock/clock.c, include/bf533.h, include/bf537.h, include/sicRegs.h:

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* interrupt/interrupt.h, serial/spi.h, serial/twi.h, serial/uart.h:
	Convert to "bool".

2008-09-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/clock.c: The Shared Memory Driver no longer requires the
	special IOCTL in Clock_control. This was a hack which has existed
	since before the Classic API Timer Manager was implemented. All
	implementations of and references to Clock_control were removed.

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* interrupt/interrupt.c, network/ethernet.c: Eliminate "boolean".
	* network/ethernet.c, serial/twi.c, timer/timer.c: Convert to "bool".

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Rename timer driver methods to follow RTEMS
	programming conventions.

2008-08-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* serial/twi.c: Remove unused var.
	* clock/tod.h: Add missing prototypes.

2008-08-15	Allan Hessenflow <allanh@kallisti.com>

	* ChangeLog, Makefile.am, README, configure.ac, preinstall.am,
	cache/cache.c, cache/cache_.h, clock/clock.c, clock/rtc.c,
	clock/tod.h, include/bf533.h, include/bf537.h, include/cecRegs.h,
	include/coreTimerRegs.h, include/dmaRegs.h, include/ebiuRegs.h,
	include/ethernetRegs.h, include/gpioRegs.h, include/memoryRegs.h,